log
Thu 28 Sep 2023 01:21:54 AM UTC: 
 tests:  0|4
total_score: 0/70
45519d5
Thu 28 Sep 2023 01:35:58 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:12: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘nuevoArreglo’
   37 |   nuevoHeap->nuevoArreglo=
      |            ^~
heap.c:39:4: error: expected expression before ‘return’
   39 |    return NULL;
      |    ^~~~~~
heap.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e10efe9
